syntax = "proto3";
package relation;
option go_package = "common/idl/relation";

message ActionRequest {
  int64 myId = 1;
  int64 toUserId = 2;
  int32 actionType = 3;
}

message ActionResponse {

}

message FollowListRequest {
  int64 myId = 1;
}

message FollowListResponse {
  repeated UserInfoModel userInfo = 1;
}


message FollowerListRequest {
  int64 myId = 1;
}

message FollowerListResponse {
  repeated UserInfoModel userInfo = 1;
}

message FriendListRequest {
  int64 myId = 1;
}

message FriendListResponse {
  repeated UserInfoModel userInfo = 1;
}

message UserInfoModel {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注，false-未关注
  string avatar = 6; //用户头像
  string background_image = 7; //用户个人页顶部大图
  string signature = 8; //个人简介
  int64 total_favorited = 9; //获赞数量
  int64 work_count = 10; //作品数量
  int64 favorite_count = 11; //点赞数量
}

service Relation {
  rpc Action(ActionRequest) returns (ActionResponse) {}
  rpc FollowList(FollowListRequest) returns (FollowListResponse) {}
  rpc FollowerList(FollowerListRequest) returns (FollowerListResponse) {}
  rpc FriendList(FriendListRequest) returns (FriendListResponse) {}
}